style: adicionando botão de logout e pequenas mudanças

--- a/global_static/global/css/default.css
+++ b/global_static/global/css/default.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 :root {
-    --color-bg-light: #f1ece6;
+    --color-bg-light: #f3f3f3;
     --color-white: #ffffff;
     --color-body-bg: #dfdfdf;
 
@@ -41,28 +41,24 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: var(--spacing-md);
+    padding: var(--spacing-lg) var(--spacing-md) var(--spacing-md);
 }
 
-#task-add-container {
-    position: relative;
-    margin-top: calc(var(--spacing-lg) * 1.5);
-    background-color: var(--color-bg-light);
-    border-radius: var(--spacing-lg);
-    padding: var(--spacing-sm);
+.default-container {
+    margin-top: calc(var(--spacing-lg));
     width: 50%;
-    overflow: hidden;
+}
 
+#task-add-form {
+    display: flex;
 }
 
 #task-list-container {
     display: flex;
     flex-flow: column;
-    margin-top: var(--spacing-lg);
     background-color: var(--color-bg-light);
     padding: calc(var(--spacing-sm) * 3);
     border-radius: calc(var(--spacing-sm) * 3);
-    width: 50%;
 }
 
 #pagination {
@@ -79,25 +75,24 @@ h1 {
 }
 
 .task-add-input {
-    background: none;
+    padding: var(--spacing-sm) var(--spacing-sm) var(--spacing-sm) calc(var(--spacing-sm) * 3);
+    background: var(--color-bg-light);
     border: none;
+    border-top-left-radius: var(--spacing-md);
+    border-bottom-left-radius: var(--spacing-md);
     outline: none;
-    padding: var(--spacing-sm) calc(var(--spacing-sm) * 15) var(--spacing-sm) calc(var(--spacing-sm) * 3);
     width: 100%;
     font-size: 18px;
 }
 
 .task-add-button {
-    position: absolute;
-    top: -4px;
-    right: 0px;
     cursor: pointer;
-    border: none;
     background-color: var(--color-primary-light);
-    height: 50px;
-    width: 75px;
+    padding: calc(var(--spacing-sm) * 1.6) calc(var(--spacing-sm) * 3) calc(var(--spacing-sm) * 1.6) calc(var(--spacing-sm) * 2);
+    border: none;
+    border-top-right-radius: var(--spacing-md);
+    border-bottom-right-radius: var(--spacing-md);
     font-size: 20px;
-    text-align: center;
     font-weight: 700;
     color: var(--color-white);
     transition: all .2s ease-in-out;
@@ -351,13 +346,19 @@ h1 {
     padding-left: 1px;
 }
 
+.logout-container {
+    display: flex;
+    width: 50%;
+    justify-content: flex-end;
+}
+
 /* Generic */
 .btn {
     cursor: pointer;
     border-radius: var(--spacing-lg);
     border: 1px solid black;
     padding: var(--spacing-sm);
-    font-size: 14px;
+    font-size: 15px;
     transition: all .1s ease-in-out;
 }
 
@@ -407,10 +408,8 @@ h1 {
 }
 
 @media (max-width: 900px) {
-    #task-add-container {
-        width: 100%;
-    }
-    #task-list-container {
+    .default-container,
+    .logout-container {
         width: 100%;
     }
     #pagination {
